# bsv-sdk-rust

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY-AUDIT.md  rust-toolchain.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release-plz.yml
bsv-sdk/: CHANGELOG.md  Cargo.toml  README.md
bsv-sdk/src/: lib.rs
crates/bsv-arc/src/: client.rs  tests.rs
crates/bsv-auth/: CHANGELOG.md  Cargo.toml
crates/bsv-auth/src/: peer.rs  utils.rs
crates/bsv-auth/src/certificates/: certificate.rs  master.rs  verifiable.rs
crates/bsv-auth/tests/: certificate_test.rs  peer_test.rs  utils_test.rs
crates/bsv-junglebus/: CHANGELOG.md
crates/bsv-junglebus/src/: tests.rs
crates/bsv-message/src/: lib.rs  signed.rs
crates/bsv-primitives/src/: lib.rs
crates/bsv-primitives/src/base58/: mod.rs
crates/bsv-primitives/src/chainhash/: mod.rs
crates/bsv-primitives/src/ec/: private_key.rs  public_key.rs  signature.rs  symmetric.rs
crates/bsv-primitives/src/hash/: mod.rs
crates/bsv-primitives/src/util/: mod.rs
crates/bsv-primitives/tests/: proptest_primitives.rs
crates/bsv-script/: CHANGELOG.md
crates/bsv-script/src/: address.rs  chunk.rs  lib.rs  script.rs
crates/bsv-script/src/interpreter/: config.rs  mod.rs  ops_arithmetic.rs  ops_crypto.rs  ops_data.rs  ops_flow.rs  parsed_opcode.rs  scriptnum.rs  stack.rs  thread.rs
crates/bsv-script/tests/: proptest_script.rs
crates/bsv-spv/: CHANGELOG.md
crates/bsv-spv/src/: beef.rs  lib.rs  merkle_path.rs  merkle_tree_parent.rs
crates/bsv-spv/tests/: proptest_spv.rs
crates/bsv-tokens/: CHANGELOG.md  Cargo.toml
crates/bsv-tokens/src/: error.rs  lib.rs  lineage.rs  proof.rs  scheme.rs  script_type.rs  types.rs
crates/bsv-tokens/src/bundle/: dstas_bundle.rs  mod.rs  planner.rs  stas3_bundle.rs  stas_bundle.rs
crates/bsv-tokens/src/factory/: contract.rs  dstas.rs  mod.rs  stas.rs  stas3.rs
crates/bsv-tokens/src/script/: dstas_builder.rs  dstas_swap.rs  mod.rs  reader.rs  stas3_builder.rs  stas3_pieces.rs  stas3_swap.rs  stas_btg_builder.rs  templates.rs
crates/bsv-tokens/src/stas3/: engine_verify.rs  mod.rs
crates/bsv-tokens/src/template/: dstas.rs  mod.rs  stas.rs  stas3.rs
crates/bsv-tokens/tests/: btg_engine_verify.rs  stas3_engine_verify.rs
crates/bsv-transaction/: CHANGELOG.md
crates/bsv-transaction/src/: input.rs  lib.rs  output.rs  tests.rs  transaction.rs
crates/bsv-transaction/src/sighash/: mod.rs
crates/bsv-transaction/src/template/: mod.rs  p2mpkh.rs
crates/bsv-transaction/tests/: proptest_transaction.proptest-regressions  proptest_transaction.rs
crates/bsv-wallet/: CHANGELOG.md  Cargo.toml
crates/bsv-wallet/src/: key_deriver.rs  lib.rs  proto_wallet.rs  serializer.rs  types.rs  wallet_trait.rs
crates/bsv-wallet/tests/: proptest_wallet.rs
docs/: PRD-p2mpkh-test-gaps.md  stas-architecture.md  stas-plan-comparison.md  stas-prd-claude.md  stas-prd-final.md  stas-prd.md
