[workspace]
resolver = "2"
members = [
    "crates/bsv-primitives",
    "crates/bsv-script",
    "crates/bsv-transaction",
    "crates/bsv-wallet",
    "crates/bsv-message",
    "crates/bsv-auth",
    "crates/bsv-spv",
    "crates/bsv-tokens",
    "crates/bsv-arc",
    "crates/bsv-junglebus",
    "bsv-sdk",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Bittoku/bsv-sdk-rust"
rust-version = "1.75"

[workspace.dependencies]
# Crypto
k256 = { version = "0.13", features = ["ecdsa", "sha256", "arithmetic"] }
sha2 = "0.10"
ripemd = "0.1"
hmac = "0.12"
aes-gcm = "0.10"
cbc = { version = "0.1", features = ["alloc"] }
aes = "0.8"
pbkdf2 = { version = "0.12", features = ["simple"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
bs58 = "0.5"

# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"

# Error handling
thiserror = "2"

# Utils
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
digest = "0.10"
generic-array = "0.14"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }

# Internal crates
bsv-primitives = { path = "crates/bsv-primitives", version = "0.3.0" }
bsv-script = { path = "crates/bsv-script", version = "0.3.0" }
bsv-transaction = { path = "crates/bsv-transaction", version = "0.3.0" }
bsv-wallet = { path = "crates/bsv-wallet", version = "0.3.0" }
bsv-message = { path = "crates/bsv-message", version = "0.3.0" }
bsv-auth = { path = "crates/bsv-auth", version = "0.3.0" }
bsv-spv = { path = "crates/bsv-spv", version = "0.3.0" }
bsv-tokens = { path = "crates/bsv-tokens", version = "0.3.0" }
bsv-arc = { path = "crates/bsv-arc", version = "0.3.0" }
bsv-junglebus = { path = "crates/bsv-junglebus", version = "0.3.0" }
