[package]
name = "bittoku-bsv"
description = "BSV Blockchain SDK - Complete SDK re-exporting all components (bsv-primitives, bsv-script, bsv-transaction, bsv-wallet, bsv-tokens, and more)"
version = "0.4.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["bitcoin", "bsv", "blockchain", "sdk"]
categories = ["cryptography"]

[dependencies]
bsv-primitives = { workspace = true }
bsv-script = { workspace = true }
bsv-transaction = { workspace = true }
bsv-wallet = { workspace = true }
bsv-message = { workspace = true }
bsv-auth = { workspace = true }
bsv-spv = { workspace = true }
bsv-tokens = { workspace = true }
bsv-arc = { workspace = true, optional = true }
bsv-junglebus = { workspace = true, optional = true }

[features]
default = []
transports = ["bsv-arc", "bsv-junglebus"]
